# Summit-Rogue_Divergent

./: Lab6.sln  README.md  RoadMap.md  The consumption dilemma  optimizations.md  todo.txt
2D renderer/: .gitignore  CMakeLists.txt
2D renderer/engine/core/: CMakeLists.txt  MathLibrary.h  Physics.h
2D renderer/engine/render/: Actor.cc  Actor.h  CMakeLists.txt  Camera.cc  Camera.h  Debug.cc  Debug.h  DebugPShader.glsl  DebugVShader.glsl  GraphicNode.cc  GraphicNode.h  Lightning.cc  Lightning.h  MeshResource.cc  MeshResource.h  ShaderResource.cc  ShaderResource.h  TextureResource.cc  TextureResource.h  Vertex.h  window.cc  window.h
2D renderer/projects/MeshRenderer/: CMakeLists.txt
2D renderer/projects/MeshRenderer/code/: exampleapp.cc  exampleapp.h
2D renderer/projects/Physics/: CMakeLists.txt
2D renderer/projects/Physics/code/: exampleapp.cc  exampleapp.h
2D renderer/textures/: ps.glsl  psNoTexture.glsl  vs.glsl
Ideas/: the feeling behind the game.txt  wild card.txt
Ideas/story flow/draft #1/: End.txt  Start.txt  time travel.txt  workplace.txt
Ideas/story flow/draft #3/: destiny.txt
Ideas/week/: parliament.txt  work Income
Task1/: DoubleLinkedList.cpp  DoubleLinkedList.h  Node.cpp  Node.h  SinglyLinkedList.h  Task1.cpp  Task1.vcxproj  Task1.vcxproj.filters
Task2/: Bullet.cpp  Bullet.h  CMakeLists.txt  Circle.cc  Circle.cpp  Circle.h  Instructions.txt  Point.cc  Point.h  Point2D.cpp  Point2D.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Task2.cpp  Task2.vcxproj  Task2.vcxproj.filters  UML Lab6Task2.drawio  consoleMain.h  hardcodedRaster.h  ideas.txt  main.cc  main.h  stats proposal.txt
